[package]
name = "WebSocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures = "0.3"
tungstenite = "0.26.1"
url = "2.2"
futures-util = "0.3"
crossterm = "0.28.1"
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
